<resources>
    <string name="app_name">FraktonTask</string>

    <!--Authentication !-->
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">OR</string>
    <string name="fill_all_fields">Please fill all the fields</string>
    <string name="login_failed">Login Failed</string>
    <string name="successfully_registered">Successfully Registered</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="logout">Logout</string>

    <!--Permissions !-->
    <string name="can_not_open_camera">Can not open camera!</string>
    <string name="warning">Warning</string>
    <string name="permission_denied_message">You need to allow camera permission in order to take photo!</string>
    <string name="permission_denied_dont_ask_again_message">\"You have disabled camera permission, please go to app settings in order to allow \"</string>
    <string name="open_app_settings">Open app settings</string>
    <string name="alert">Alert</string>

    <!--Fav Places !-->
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="do_you_want_to_delete_this_item">Do you want to delete this item?</string>
    <string name="no_places_saved_yet">No places saved yet!</string>

    <!--Home !-->
    <string name="map">Map</string>
    <string name="home">Home</string>
    <string name="do_you_want_to_save_this_place_to_favourites_places">Do you want to save this place as favourite?</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="take_photo">Take Photo</string>
    <string name="do_you_want_to_logout">Do you want to logout?</string>
    <string name="info_message">In order to save a place as a favorite just click on the map in the place you want!</string>

</resources>