<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/do_you_want_to_save_this_place_to_favourites_places"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textColor="@color/purple_700" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_dialog_message"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.5"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />


        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="0.5"
            android:textColor="@color/colorWhite"
            android:text="@string/save"
            android:textSize="12sp" />

    </LinearLayout>


</RelativeLayout>